retrieveUnpackaged/objects/MSY_Values__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Long_Description_Text__c</fullName>
        <label>Code Long Description Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Short_Description_Text__c</fullName>
        <label>Code Short Description Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Value__c</fullName>
        <label>Code Value</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Sequence_Number__c</fullName>
        <label>Display Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Table_Specific_Text__c</fullName>
        <label>Table Specific Text</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <label>MSY Values</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Code ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSY Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>